[user] Update unit tests